kubernetes/overlays/infrastructure/infra/applications/cilium/network-policies/allow-cilium-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cilium-ingress
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/part-of: cilium
      #k8s-app: hubble-ui
  policyTypes:
  - Ingress
  ingress:
  - {}
